--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="html/hilos.html">Hilos</a></li>
         <li><a href="html/agujas.html">Agujas</a></li>
         <li><a href="html/patrones.html">Patrones</a></li>
+        <li><a href="html/primerparcial.html">Primer parcial</a></li>
       </ul>
     </nav>
   </header>
