--- a/html/patrones.html
+++ b/html/patrones.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="nav">
           <ul>
-            <li><a href="html/lanas.html">Lanas</a></li>
+            <li><a href="html/patrones.html">Patrones</a></li>
           </ul>
         </nav>
       </header>
