--- a/html/agujas.html
+++ b/html/agujas.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="nav">
           <ul>
-            <li><a href="html/lanas.html">Lanas</a></li>
+            <li><a href="html/agujas.html">Agujas</a></li>
           </ul>
         </nav>
       </header>
@@ -40,7 +40,7 @@
         </div>
       </div> 
       <footer>
-        <a href="../index.html">←Volver atrás</a>
+        <a href="../index.html"><h2>←Volver atrás</h2></a>
       </footer> 
 </body>
 </html>
