--- a/html/hilos.html
+++ b/html/hilos.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="nav">
           <ul>
-            <li><a href="html/lanas.html">Lanas</a></li>
+            <li><a href="html/hilos.html">Hilos</a></li>
           </ul>
         </nav>
       </header>
