--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Licrochet</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="https://yaestariacrochet.com/cdn/shop/files/Logo-Ya_estariia-crochet.png?v=1681146302&width=500">
 </head>
 
 <body>
